# R-Type

./: .gitignore  CMakeLists.txt  Doxyfile  ROADMAP.md  Readme.md  build.sh  daily.py  log.txt  setup.ps1  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
client/: CMakeLists.txt  Makefile
client/asset/: asset.txt  shema.drawio
client/docs/: Clickable.md  Controllable.md  Health.md  KeyReaction.md  KeyboardInput.md  Move.md  MoveBehavior.md  OnCollision.md  Position.md  ReactCursor.md  Resize.md  SoundWrapper.md  Text.md  Velocity.md
client/docs/.obsidian/: workspace.json
client/include/: GameView.hpp  MainView.hpp  ServerGameScene.hpp  ServerListView.hpp  SettingsView.hpp
client/includes/: my.hpp
client/includes/class/: Game.hpp  Server.hpp
client/includes/class/component/: Button.hpp
client/src/: main.cpp
client/src/class/: Game.cpp  Server.cpp
client/src/class/component/: Button.cpp
docs/: BuildWithCMake.md  GenerateDoxygenDocs.md  Init Dependancies.md  InitDependancies.md  InitDependencies.md  Windows Initial Setup.md  WindowsInitialSetup.md
docs/Client/: Client.md  Hitbox.md
engine/: .gitignore  CMakeLists.txt  Makefile
engine/docs/: Engine_Initialisation.md  Registry_Usage.md  Systems_Creation.md  client_server_communication.md  client_server_communication_v2.md  create_component.md  creating_udp_handler.md
engine/docs/.obsidian/: workspace.json
engine/include/: Communication_Headers.hpp  Communication_Structures.hpp  Engine.hpp  Exceptions.hpp  Game.hpp  LogicSystems.hpp  RaylibWrapper.hpp  ResourceManager.hpp  WaveStructures.hpp  define.hpp
engine/include/ECS/: Entity.hpp  Registry.hpp  Sparse_Array.hpp  System.hpp
engine/include/ECS/components/: Controllable.hpp  Drawable.hpp
engine/include/client/: ClientEngine.hpp  ClientSystem.hpp
engine/include/components/: AI.hpp  AnimatedDraw.hpp  Boss.hpp  Clickable.hpp  ComponentIncluder.hpp  Controllable.hpp  Drawable.hpp  Health.hpp  HitTag.hpp  Hitbox.hpp  KeyReaction.hpp  KeyboardInput.hpp  Move.hpp  MoveBehavior.hpp  OnCollision.hpp  Position.hpp  ReactCursor.hpp  ReactMouse.hpp  ReceiveUDP.hpp  Resize.hpp  SoundWrapper.hpp  Text.hpp  Velocity.hpp
engine/include/server/: ServerEngine.hpp  ServerSystem.hpp
engine/src/: ClientEngine.cpp  Engine.cpp  Game.cpp  ServerEngine.cpp  System.cpp  main.cpp
engine/src/server/: ServerEngine.cpp  ServerSystem.cpp
server/: CMakeLists.txt  Makefile
server/docs/: Registry_Usage.md
server/include/: Exceptions.hpp  Game.hpp  SetupRegistry.hpp
server/include/ECS/: Registry.hpp
server/include/ECS/components/: Drawable.hpp  Position.hpp  Velocity.hpp
server/includes/: my.hpp
server/src/: SetupRegistry.cpp  main.cpp
